// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MessageItem > render basic 1`] = `
<div>
  <div
    class="flex justify-self-start my-6 mobile:  max-w-[70%]"
  >
    <div
      class="max-w-max px-6 py-3 rounded-2xl text-base bg-gray-100 text-black "
    >
      Hi
    </div>
  </div>
</div>
`;

exports[`MessageItem > render basic msg from me 1`] = `
<div>
  <div
    class="flex justify-self-end my-6 mobile:  max-w-[70%]"
  >
    <div
      class="max-w-max px-6 py-3 rounded-2xl text-base bg-basic-purple text-white "
    >
      Hi
    </div>
  </div>
</div>
`;

exports[`MessageItem > render error msg 1`] = `
<div>
  <div
    class="flex justify-self-end my-6 mobile:  max-w-[70%]"
  >
    <div
      class="max-w-max px-6 py-3 rounded-2xl text-base bg-basic-purple text-white "
    >
      Hi
    </div>
  </div>
</div>
`;
